--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.outer_box{
+  border:1px solid black;
+  width:70%;
+  margin:30px auto;
 }
+.inputbox{
+  margin:20px auto;
+  width:90%;
+  
+}
+input[type="text"]{
+  width:90%;
+  height:30px;
+  font-size:16px;
+  margin-bottom:20px;
+  
+}
+.list{
+  
+  width:230px;
+  margin-left:50px;
+  
+}
+.list ul{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0;
+}
+.list ul li{
+  list-style: none;
+  color:rgb(0, 132, 255);
+  cursor:pointer;
+}
+.task_box{
+  
+  margin:30px 50px;
+}
+.tasks{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height:40px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items:center;
+  justify-content: space-between;
+  padding:5px;
+  margin:10px 0px;
+  background-color:rgb(245, 230, 230);
+}
+input[type="checkbox"]
+{
+  width:20px;
+  height:30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskdetails{
+  display:flex;
+  align-items:center;
+  gap:5px;
+}
+.taskname{
+  text-overflow: none;
 }
